# lox

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  hello  hello.cpp
.github/workflows/: go.yml
cpplox/index/: ast.hpp.0E3A486D33494DF3.idx  ast.hpp.934B84A380D2F8A2.idx  ast.test.cpp.C7690D7C3686B20A.idx  ast_printer.hpp.25A1FE5D40886442.idx  ast_printer.hpp.5ED12B981FFB4B85.idx  base_value.hpp.394A63D8062595B3.idx  box.hpp.CA0D07A7476FFEFD.idx  box.hpp.EC9AB6FD8DB5EAA8.idx  environment.cpp.024A16C06A4F1208.idx  environment.cpp.8D464402232DFD37.idx  environment.cpp.D544D0EC02B19387.idx  environment.hpp.1F0FA13AED818FDA.idx  environment.hpp.7C09596DC3EC9899.idx  error.cpp.BA8C91318A82B1AE.idx  error.hpp.F4C2CCFC378183BD.idx  errors.cpp.248446FBB36F719D.idx  errors.cpp.5982BD0C3EF685BD.idx  errors.hpp.CB270A661CEB81DC.idx  expr.cpp.964748B47CEAAD29.idx  expr.hpp.07176DE73EBE9CAB.idx  expr.hpp.20354B76F483DCD8.idx  function.hpp.BEA09EAFC06BD62C.idx  grammar.hpp.5CA1D7D287A5A2AA.idx  interpreter.cpp.00929D4BBCD4FA4D.idx  interpreter.cpp.5754A0391435F703.idx  interpreter.cpp.E502DA9D00483920.idx  interpreter.hpp.87D6C5E96C993DE0.idx  interpreter.hpp.AAC6075C116AB16E.idx  interpreter.test.cpp.7AAB7A742B94CB50.idx  logger.cpp.DCC3B8B505FEC30F.idx  logger.hpp.7151F515CE40FDB1.idx  main.cpp.79E4268868F3D7E5.idx  main.cpp.7E53EE9F07C3BC83.idx  main.cpp.9CBEFEDFAE004542.idx  main.cpp.A127642C7A0715C2.idx  parser.cpp.1EB53D274ABFD95E.idx  parser.cpp.3A78FDD91E0F2641.idx  parser.cpp.7AE68138B0773780.idx  parser.hpp.732A4E9056B96B2E.idx  parser.hpp.AF2CB3F7F7A6B872.idx  (+24 more)
cpplox/lox/: errors.cpp  errors.hpp
cpplox/lox/interpreter/: environment.cpp  environment.hpp  value.hpp
cpplox/lox/parser/: parser.hpp
cpplox/lox/scanner/: scanner.hpp
cpplox/lox/token/: token.cpp  token.hpp
cpplox/repl/: CMakeLists.txt
cpplox/tests/: CMakeLists.txt  scanner.test.cpp  util.cpp  util.hpp
cpplox/tests/testdata/interpreter/: closure.lox  count.lox  sayhi.lox
cpplox/tests/testdata/scanner/: invalid_char.lox  keywords.lox  unicode.lox
glox/: .golangci.yaml  README.md  Taskfile.yaml  go.mod  go.sum
glox/.helix/: languages.toml
glox/cmd/lox/: main.go
glox/internal/ast/: ast.go  expr.go  printer.go  printer_test.go  value.go
glox/internal/env/: env.go
glox/internal/interpreter/: interpreter.go  interpreter_internal_test.go  interpreter_test.go
glox/internal/last/: expr.go  printer.go  printer_test.go
glox/internal/lscanner/: scanner.go  scanner_test.go
glox/internal/ltoken/: token.go  token_test.go  type_string.go
glox/internal/parser/: parser.go  parser_test.go
glox/internal/scanner/: scanner.go  scanner_test.go
glox/internal/token/: token.go  token_test.go  type_string.go
golox/: go.mod
golox/cmd/lox/: main.go
lox/: CMakeLists.txt  ast.hpp  ast_printer.hpp  box.hpp  environment.cpp  environment.hpp  error.cpp  error.hpp  errors.cpp  errors.hpp  expr.hpp  grammar.hpp  interpreter.cpp  interpreter.hpp  main.cpp  parser.cpp  parser.hpp  scanner.cpp  scanner.hpp  token.cpp  token.hpp
lox/ast/: CMakeLists.txt  ast.hpp  ast_printer.hpp  expr.cpp  expr.hpp
lox/interpreter/: CMakeLists.txt  environment.cpp  environment.hpp  interpreter.cpp  interpreter.hpp  parser.hpp  value.cpp  value.hpp
lox/parser/: CMakeLists.txt  parser.cpp  parser.hpp  scanner.cpp  scanner.hpp  token.cpp  token.hpp
lox/resolver/: resolver.cpp  resolver.hpp
lox/scanner/: scanner.cpp  scanner.hpp
lox/token/: token.cpp  token.hpp
repl/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  ast.test.cpp  interpreter.test.cpp  scanner.test.cpp  token.test.cpp  util.cpp  util.hpp
tests/testdata/interpreter/: break.lox  fib.lox
tests/testdata/scanner/: block.lox  numbers.lox  tokens.lox  unterminated.lox  unterminated_comment.lox  unterminated_string.lox
(+1 files in other folders)
